# trader

./: .env.example  .env.sandbox  .ghci  .gitignore  .scheme.yml  CHANGELOG.md  Makefile  Makefile.native  README.md  project.nix  release.nix  settings.dhall  shell.nix  trader.cabal
bank/: Main.hs
bank/Bank/: Model.hs
bank/Bank/Model/: Account.hs  Customer.hs
bank/Bank/Model/Account/: Aggregate.hs  Command.hs  Data.hs  Event.hs  Projection.hs
bank/Bank/Model/Account/Command/: Accept.hs  Credit.hs  Debit.hs  Open.hs  Transfer.hs
bank/Bank/Model/Account/Data/: PendingTransfer.hs
bank/Bank/Model/Account/Event/: Credited.hs  CreditedFromTransfer.hs  DebitRejected.hs  Debited.hs  OpenRejected.hs  Opened.hs  TransferCompleted.hs  TransferRejected.hs  TransferStarted.hs
bank/Bank/Model/Customer/: Aggregate.hs  Command.hs  Event.hs  Projection.hs
bank/Bank/Model/Customer/Command/: Create.hs
bank/Bank/Model/Customer/Event/: Created.hs  CreationRejected.hs
counter/: Main.hs
counter/Counter/: Aggregate.hs  CLI.hs  Command.hs  Event.hs  Model.hs  Projection.hs
counter/Counter/CLI/: Command.hs  Options.hs  Run.hs  Store.hs
nix/: co-log.nix  dotenv.nix  eventful-core.nix  eventful-memory.nix  eventful-postgresql.nix  eventful-test-helpers.nix  project.nix  req.nix  retry.nix
server/: CLI.hs  Dotenv.hs  Main.hs
src/: Trader.hs
src/Data/Time/Format/: Extra.hs
src/Network/HTTP/Req/: Extra.hs
src/Sandbox/: Aeson1.hs  Crypto1.hs  Eventful1.hs  Eventful2.hs  Eventful3.hs  Records1.hs  Req1.hs  Req2.hs  Req3.hs  SumType1.hs
src/Sandbox/CQRS/: EventStore.hs
src/Sandbox/Records/: Bar.hs  Foo.hs
src/Trader/: API.hs  App.hs  Capability.hs  Config.hs  Data.hs  Env.hs  Exception.hs  Loop.hs  Settings.hs
src/Trader/API/: Auth.hs  Request.hs
src/Trader/API/Auth/: Key.hs
src/Trader/API/Endpoint/: Filter.hs  Order.hs  QuoteL1.hs  QuoteL2.hs
src/Trader/API/Endpoint/Order/: Placement.hs
src/Trader/API/Request/: Expiration.hs  Signature.hs
src/Trader/Capability/: Http.hs  Resource.hs
src/Trader/Capability/Resource/: Order.hs  QuoteL2.hs
src/Trader/Data/: Account.hs  Currency.hs  Instrument.hs  Network.hs  Order.hs  PriceLevel.hs  QuoteL1.hs  QuoteL2.hs  Touchline.hs
src/Trader/Data/Instrument/: FairMethod.hs  InstrumentState.hs  MarkMethod.hs  Symbol.hs  TickDirection.hs
src/Trader/Data/Instrument/Symbol/: InstrumentSymbol.hs  RootSymbol.hs
src/Trader/Data/Order/: ExecutionInstruction.hs  OrderStatus.hs  OrderType.hs  PegPriceType.hs  Side.hs  TimeInForce.hs
src/Trader/Util/: JSON.hs
test/Sandbox/: Test1.hs
test/Trader/API/Request/: SignatureTest.hs
